@startuml
class Supermercado {
    -nombre: String

    +registrarCliente()
    +generarFactura()
    +mostrarInventario()
    +mostrarFacturas()
}

class Factura {
    -costoTotal: double
}

abstract class Producto {
    -nombre: String
    -precioUnitario: double
    +{abstract}calcularIva()
}

abstract class Cliente {
    -nombre: String
    -cédula: String
}

class ClienteManaba {
    -IVAESPECIALIZADO
}

class ClienteGuayaco {
    -IVAESPECIALIZADO
}

class ProductoIVA {
    -{static}IVA: double
}

Producto <|-- ProductoConIVA12
Producto <|-- ProductoConIVA14
Producto <|-- ProductoSinIVA
Supermercado -->"*" Producto: - productos
Supermercado -->"*" Factura: - facturas
Supermercado -->"*" Cliente: - clientes
Cliente ->"1" Factura: - factura
ClienteManaba -up-|> Cliente
ClienteGuayaco -up-|> Cliente
Factura -->"*" Producto: - productos
@enduml